cmake_minimum_required(VERSION 2.8)
project( masktuner )
find_package( OpenCV REQUIRED )
add_executable( masktuner masktuner.cpp )
add_executable( displayimage displayimage.cpp )
add_executable( drawer drawer.cpp )
target_link_libraries( masktuner ${OpenCV_LIBS} )
target_link_libraries( displayimage ${OpenCV_LIBS} )
target_link_libraries( drawer ${OpenCV_LIBS} )
